<resources>
    <string name="app_name">IntelliLearn Teacher App</string>
    <string name="question">Question</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="weight_default_value_1">Weight (Default Value: 1)</string>
    <string name="item">Item</string>
    <string name="topic_name">Topic Name</string>
    <string name="unit_number">Unit Number</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dash">-</string>
    <string name="title_activity_ask_ai">AskAI</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="refresh_schedule">Refresh Schedule</string>
    <string name="note_content">Note Content</string>
    <string name="my_notes">My Notes</string>
    <string name="note_created_on">Created On</string>
    <string name="title_Note">Note Title</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="announcements_title">My Announcements</string>
    <string name="announcement_title_label">Title:</string>
    <string name="announcement_author_label">Author:</string>
    <string name="announcement_class_label">Class:</string>
    <string name="announcement_date_label">Date:</string>
    <string name="announcement_content_label">Content:</string>
    <string name="loading_announcements_message">Loading announcements...</string>


</resources>