<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/announcementCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:id="@+id/announcementLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/announcementTitleTextView"
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/announcement_title_label"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/announcementTitleValueTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/announcementAuthorTextView"
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/announcement_author_label"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/announcementAuthorValueTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/announcementClassTextView"
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/announcement_class_label"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/announcementClassValueTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/announcementDateTextView"
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/announcement_date_label"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/announcementDateValueTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/announcementContentTextView"
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/announcement_content_label"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/announcementContentValueTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />
    </LinearLayout>
</androidx.cardview.widget.CardView>

